# hdeq

./: .gitignore  LICENSE  README.md  hdeq.cabal
src/Distributed/DEQ/: Config.hs  Local.hs  Queue.hs  Remote.hs  Server.hs  Server.hs-boot  Types.hs
src/Distributed/DEQ/Server/: Config.hs
utils/: DEQLocalClient.hs  DEQLocalServer.hs  DEQTestWriter.hs
